# aoc2022

./: LICENSE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
src/aoc_2022/days/: day_10.py  day_11.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
src/aoc_2022/days/day_1/: part_1.py
src/aoc_2022/static/: template.txt
src/aoc_2022/tools/: cli.py  mkday_cli.py
src/aoc_2022/utils/: day_handler.py  get.py  mkday.py  transforms.py
