[metadata]
name = aoc_2022
description = Advent of Code 2022 (with utilities for automated interaction with the site)
author = Gregory Symington (GregSym)
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    aoc_2022
    aoc_2022.utils
    aoc_2022.tools
    aoc_2022.static
# packages = find:

# [options.packages.find]
# where = src
# include = pkg*


install_requires =
    requests>= 2.28

python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov>=3.0
    mypy>=0.930
    flake8>=5.0
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160